--- a/Example/ChangeBackgroundColor/Podfile
+++ b/Example/ChangeBackgroundColor/Podfile
@@ -3,6 +3,6 @@ platform :ios, '8.0'
 use_frameworks!
 
 target 'ChangeBackgroundColor' do
-    pod 'Gollum', :git => 'git@github.com:eduardoeof/Gollum.git', :tag => '0.1.0'
+    pod 'Gollum'
 end
 
