--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-# see https://github.com/travis-ci/travis-ci/issues/3040
-
 language: objective-c
 
 osx_image: xcode7.3
@@ -14,3 +12,6 @@ script:
   - open -b com.apple.iphonesimulator --args -CurrentDeviceUDID $SIMULATOR_ID
   - set -o pipefail
   - xcodebuild clean build test -project Workspace/Gollum/Gollum.xcodeproj -scheme Gollum -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO -destination "platform=iOS Simulator,name=$DEVICE,OS=$IOS_VERSION" | xcpretty -c
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
