--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   - echo $SIMULATOR_ID
   - open -b com.apple.iphonesimulator --args -CurrentDeviceUDID $SIMULATOR_ID
   - set -o pipefail
-  - xcodebuild clean build test -project Workspace/Gollum/Gollum.xcodeproj -scheme Gollum -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO -destination "platform=iOS Simulator,name=$DEVICE,OS=$IOS_VERSION" | xcpretty -c
+  - xcodebuild clean build test -workspace Workspace/Gollum.xcworkspace -scheme Gollum -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO -destination "platform=iOS Simulator,name=$DEVICE,OS=$IOS_VERSION" | xcpretty -c
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
