Enable tailor engine on code climate file

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,7 +1,9 @@
----
 engines:
-  fixme:
+  tailor:
     enabled: true
+
 ratings:
-  paths: []
+  paths:
+  - "Gollum/**.swift"
+
 exclude_paths: []
